2008-06-05  Maciej Piechotka  <uzytkownik2@gmail.com>

	* src/gnome-cmd-main-menu.cc:
	"S_ynchonize Directories" -> "S_ynchronize Directories" (problem #536705)

2008-06-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	Revamped 'Search...' dlg

2008-06-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-con.h:
	Removed superfluous alias from GnomeCmdConFtp object

	* src/gnome-cmd-data.cc:
	Simplify code for connections loading from cfg

2008-06-02  Mamoru Tasaka <mtasaka@ioa.s.u-tokyo.ac.jp>

	* src/gnome-cmd-includes.h:
	* src/intviewer/image-render.cc:
	* src/intviewer/text-render.cc.:
	* src/intviewer/viewer-widget.cc:
	Add patch to compile with GTK 2.13.X

2008-06-01  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.7


##############################################################################
#                                   1.2.6                                    #
##############################################################################

2008-05-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-xfer-dialog.cc:
	Fixed problem with full file path handling while copying/moving to mounted devices

2008-05-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	Added missing directory separator in remote sever dlg

2008-05-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/text-render.cc:
	Fixed bug #496150 (scrolling with mouse wheel)

2008-05-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	i18n

2008-05-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "Open folder in Nautilus" action to RMB and user actions.

2008-05-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.cc