@@ -111,6 +111,8 @@ inline gboolean gnome_cmd_file_selector_is_local (GnomeCmdFileSelector *fs)
     return gnome_cmd_con_is_local (gnome_cmd_file_selector_get_connection (fs));
 }
 
+gboolean gnome_cmd_file_selector_is_local (FileSelectorID fsID);
+
 void gnome_cmd_file_selector_update_style (GnomeCmdFileSelector *fs);
 
 void gnome_cmd_file_selector_show_mkdir_dialog (GnomeCmdFileSelector *fs);
