@@ -1,3 +1,10 @@
+2008-06-05  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-selector.cc:
+	* src/gnome-cmd-file-selector.h:
+	* src/gnome-cmd-prepare-xfer-dialog.cc:
+	Yet another fix for full file path handling while copying/moving to the mounted devices
+
 2008-06-05  Maciej Piechotka  <uzytkownik2@gmail.com>
 
 	* src/gnome-cmd-main-menu.cc:
